# telemetry-computer-test

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
board/: .gitignore
board/telemetry-computer/: CMakeLists.txt  telemetry-computer.ioc
board/telemetry-computer/Core/Inc/: main.h
board/telemetry-computer/Core/Src/: gpio.c  main.c
board/telemetry-computer/bsp/: bsp.cpp
board/telemetry-computer/cmake/: gcc-arm-none-eabi.cmake
board/telemetry-computer/cmake/stm32cubemx/: CMakeLists.txt
src/: main.cpp
src/bsp/: bsp.h
